--- a/client/src/features/home/components/VideoPost/VideoPost.module.scss
+++ b/client/src/features/home/components/VideoPost/VideoPost.module.scss
@@ -1,7 +1,7 @@
 @import 'styles/variables';
 
 .wrapVideoPost {
-  margin-top: 10rem;
+  margin: 10rem 0 15rem 0;
 }
 .contentVideo {
   margin-top: 11rem;
