--- a/client/src/features/home/screens/components/HotTopics/HotTopics.module.scss
+++ b/client/src/features/home/screens/components/HotTopics/HotTopics.module.scss
@@ -1,4 +1,4 @@
-@import "styles/variables";
+@import 'styles/variables';
 
 .hotTopicsBg {
   max-width: 153.7rem;
@@ -16,13 +16,14 @@
 
   .carouselHotTopic {
     margin-top: 7rem;
+    margin-left: -1rem;
+    margin-right: -1rem;
 
     .carouselGroup {
       width: 100%;
-      flex-wrap: nowrap;
       display: flex;
+      flex-wrap: nowrap;
       overflow: hidden;
-      transition: 0.3s ease-in-out;
     }
   }
 }
